--- a/_posts/2024-05-01-tabs.md
+++ b/_posts/2024-05-01-tabs.md
@@ -6,6 +6,8 @@ description: this is what included tabs in a post could look like
 tags: formatting code
 categories: sample-posts
 tabs: true
+toc:
+  sidebar: left
 ---
 
 This is how a post with [tabs](https://github.com/Ovski4/jekyll-tabs) looks like. Note that the tabs could be used for different purposes, not only for code.
