--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -18,7 +18,7 @@ typing effects of the blog title. **FINISHED**
 change the colors of white to #f5f5f5 **FINISHED**
 
 ### search bar issues
-only show command + k all the time 
+only show command + k all the time **FINISHED**
 change the animation that show a rounded rectangle and transition to the colors
 
 ### Blockquote Update
@@ -30,20 +30,20 @@ add features :::note ::: shortcut
 make it has a default color and pill-shaped
 
 ### toc updates
-will not allow mobile users to see the toc sidebar
+will not allow mobile users to see the toc sidebar **FINISHED**
 
 ## optimation
 run the features first the text flashing white problem in dark mode
 
 ### art
-adjust the about page arts
-add a references to the sentences [1]
+adjust the about page arts **FINISHED**
+add a references to the sentences [1] **FINISHED**
 
 adjust the code block show line numbers and smaller line numbers and change the colors
 in the light mode change the blockquote colors.
 ### nav
-about pages does not allow any social bar
-using coding symbol for the nav left and no bold
+about pages does not allow any social bar **FINISHED**
+using coding symbol for the nav left and no bold 
 
 in the post list i add a pilled-shape 
 adjust the post title to 100% width
@@ -54,11 +54,9 @@ adjust the post title to 100% width
 ### archive page change
 
 ### logic
-after second pages of post lists, do not show the tage-catgory 
-
-change the up to tod
-
-I move up the post titles
+after second pages of post lists, do not show the tage-catgory **FINISHED**
+change the up to top 
+I move up the post titles **FINISHED**
 
 ### previous and next post nav
 udpate the arrorand the post title
