update search nav bar for testing

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -43,7 +43,7 @@ adjust the code block show line numbers and smaller line numbers and change the 
 in the light mode change the blockquote colors.
 ### nav
 about pages does not allow any social bar **FINISHED**
-using coding symbol for the nav left and no bold 
+using coding symbol for the nav left and no bold **FINISHED**
 
 in the post list i add a pilled-shape 
 adjust the post title to 100% width
@@ -61,7 +61,7 @@ I move up the post titles **FINISHED**
 ### previous and next post nav
 udpate the arrorand the post title
 
-delete redundant code in head.liquid - font
+delete redundant code in head.liquid - font **FINISHED**
 
 blod text to theme colors
 update copy button.
