update post tile design and code wrapper design

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -19,12 +19,32 @@ change the colors of white to #f5f5f5 **FINISHED**
 
 ### search bar issues
 only show command + k all the time **FINISHED**
-change the animation that show a rounded rectangle and transition to the colors
+change the animation that show a rounded rectangle and transition to the colors **FINISHED**
+
+
+```bash
+git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+mkdir -p "$(rbenv root)"/plugins
+git clone https://github.com/rbenv/ruby-build.git "$(rbenv root)"/plugins/ruby-buildr
+brew install ruby 
+ruby -v
+
+echo 'export PATH="/usr/local/opt/ruby/bin:$PATH"' >> ~/.zshrc 
+rbenv install 3.2.3        
+gem install bundler:2.5.18 --user-install 
+bundle install
+bundle exec jekyll serve --lsi
+```
+
+
+
 
 ### Blockquote Update
 update a new features
 add a new note feature
 add features :::note ::: shortcut
+
+
 
 ### Tabs Update
 make it has a default color and pill-shaped
@@ -33,20 +53,20 @@ make it has a default color and pill-shaped
 will not allow mobile users to see the toc sidebar **FINISHED**
 
 ## optimation
-run the features first the text flashing white problem in dark mode
+run the features first the text flashing white problem in dark mode **FINISHED**
 
 ### art
 adjust the about page arts **FINISHED**
 add a references to the sentences [1] **FINISHED**
 
-adjust the code block show line numbers and smaller line numbers and change the colors
-in the light mode change the blockquote colors.
+adjust the code block show line numbers and smaller line numbers and change the colors  **FINISHED**
+in the light mode change the blockquote colors. **FINISHED**
+
 ### nav
 about pages does not allow any social bar **FINISHED**
 using coding symbol for the nav left and no bold **FINISHED**
-
-in the post list i add a pilled-shape 
-adjust the post title to 100% width
+in the post list i add a pilled-shape **FINISHED**
+adjust the post title to 100% width **FINISHED**
 
 ### hyperlink only http:// better animation
 
@@ -55,16 +75,14 @@ adjust the post title to 100% width
 
 ### logic
 after second pages of post lists, do not show the tage-catgory **FINISHED**
-change the up to top 
+change the up to top **FINISHED**
 I move up the post titles **FINISHED**
 
 ### previous and next post nav
-udpate the arrorand the post title
-
+udpate the arrorand the post title **FINISHED**
 delete redundant code in head.liquid - font **FINISHED**
+blod text to theme colors **FINISHED**
 
-blod text to theme colors
-update copy button.
 
 ## to-do updates
  add dom transition like the blog
