update blockquote scss and project nav name

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -37,11 +37,52 @@ bundle install
 bundle exec jekyll serve --lsi
 ```
 
+Fix prettier issues:
+```bash
+npm install --save-dev prettier @shopify/prettier-plugin-liquid  
+npx prettier . --check       
+npx prettier --write .          
+```
+
+
 ### Blockquote Update
 
 update a new features
 add a new note feature
 add features :::note ::: shortcut
+
+> ###### DANGER
+>
+> This is a danger **zone**, and thus should
+> be used carefully
+{: .block-danger }
+
+> ###### NOTE
+>
+> This is a note **zone**, and thus should
+> be used carefully
+{: .block-note }
+
+> ###### IMPORTANT
+>
+> This is a important **zone**, and thus should
+> be used carefully
+{: .block-important }
+
+> ###### TIP    
+>
+> This is a tip **zone**, and thus should
+> be used carefully
+{: .block-tip }
+
+> ###### WARNING  
+>
+> This is a warning **zone**, and thus should
+> be used carefully
+{: .block-warning }
+
+> TEST FOR USING THE REFERENCES
+
 
 ### Tabs Update
 
