update blockquotes and markdown hyperlink

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -47,15 +47,15 @@ npx prettier --write .
 
 ### Blockquote Update
 
-update a new features
-add a new note feature
-add features :::note ::: shortcut
+update a new features **FINISHED**
+add a new note feature **FINISHED**
 
 > ###### DANGER
 >
 > This is a danger **zone**, and thus should
 > be used carefully
 {: .block-danger }
+
 
 > ###### NOTE
 >
@@ -83,9 +83,6 @@ add features :::note ::: shortcut
 
 > TEST FOR USING THE REFERENCES
 
-### Tabs Update
-
-make it has a default color and pill-shaped
 
 ### toc updates
 
@@ -115,6 +112,8 @@ adjust the post title to 100% width **FINISHED**
 ### archive page change
 
 ### logic
+
+[test](https://www.google.com)
 
 after second pages of post lists, do not show the tage-catgory **FINISHED**
 change the up to top **FINISHED**
