update hyperlink, add symbol to blockquotes, and change the ref text color

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -83,6 +83,8 @@ add a new note feature **FINISHED**
 
 > TEST FOR USING THE REFERENCES
 
+> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 
 ### toc updates
 
@@ -108,12 +110,12 @@ in the post list i add a pilled-shape **FINISHED**
 adjust the post title to 100% width **FINISHED**
 
 ### hyperlink only http:// better animation
+[test](https://www.google.com)
+hyperlink to the external website will open in a new tab **FINISHED**
 
 ### archive page change
 
 ### logic
-
-[test](https://www.google.com)
 
 after second pages of post lists, do not show the tage-catgory **FINISHED**
 change the up to top **FINISHED**
