update tabs, blog list, and pagination

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -113,8 +113,6 @@ adjust the post title to 100% width **FINISHED**
 [test](https://www.google.com)
 hyperlink to the external website will open in a new tab **FINISHED**
 
-### archive page change
-
 ### logic
 
 after second pages of post lists, do not show the tage-catgory **FINISHED**
@@ -127,18 +125,31 @@ udpate the arrorand the post title **FINISHED**
 delete redundant code in head.liquid - font **FINISHED**
 blod text to theme colors **FINISHED**
 
-## to-do updates
 
-add dom transition like the blog
-better archive timeline
-create a new nav bar - somnium 用来储存各种想法艺术 (the rename of projects) adjust the layout...
+---
 
-add repository cards and syntax
-write a scirpt that can write the post quickly
-using folder for better management of folders
-fix distill next and previous post nav
+## TODO-Updates:
+- change the bullet point or number to theme colors **FINISHED**
+- tab indicator features change **FINISHED**
+- add dom transition like the blog
+- Bootstrap Tables edit make it more beautiful
+- dynamic github repository cards
+- add interactive cursor
 
-add interactive cursor
-let music play automatically
+## Later to do
+- archive page changes
+- add extract block
+- edit distill page and add previous and next post nav
+- music
+- Add adhd button for good reading. first word is capital.  
 
-adjust the table scss
+I'm a numeric nested list:
+1. First item
+2. Second item
+   1. Subitem 1:
+      1. subsubitem 1:
+         1. subsubsubitem 1
+         2. subsubsubitem 2
+      2. subsubitem 2
+   2. Subitem 3
+   3. Subitem 4
