fix blockquote symbols and styles, post title spaces, tags, category. Initialize the blog.

--- a/_posts/2024-11-29-updates.md
+++ b/_posts/2024-11-29-updates.md
@@ -53,6 +53,7 @@ add a new note feature **FINISHED**
 > ###### DANGER
 >
 > This is a danger **zone**, and thus should
+> [test](https://www.google.com)
 > be used carefully
 {: .block-danger }
 
@@ -60,24 +61,28 @@ add a new note feature **FINISHED**
 > ###### NOTE
 >
 > This is a note **zone**, and thus should
+> [test](https://www.google.com)
 > be used carefully
 {: .block-note }
 
 > ###### IMPORTANT
 >
 > This is a important **zone**, and thus should
+> [test](https://www.google.com)
 > be used carefully
 {: .block-important }
 
 > ###### TIP
 >
 > This is a tip **zone**, and thus should
+> [test](https://www.google.com)
 > be used carefully
 {: .block-tip }
 
 > ###### WARNING
 >
 > This is a warning **zone**, and thus should
+> [test](https://www.google.com)
 > be used carefully
 {: .block-warning }
 
@@ -125,24 +130,6 @@ udpate the arrorand the post title **FINISHED**
 delete redundant code in head.liquid - font **FINISHED**
 blod text to theme colors **FINISHED**
 
-
----
-
-## TODO-Updates:
-- change the bullet point or number to theme colors **FINISHED**
-- tab indicator features change **FINISHED**
-- add dom transition like the blog
-- Bootstrap Tables edit make it more beautiful
-- dynamic github repository cards
-- add interactive cursor
-
-## Later to do
-- archive page changes
-- add extract block
-- edit distill page and add previous and next post nav
-- music
-- Add adhd button for good reading. first word is capital.  
-
 I'm a numeric nested list:
 1. First item
 2. Second item
@@ -153,3 +140,52 @@ I'm a numeric nested list:
       2. subsubitem 2
    2. Subitem 3
    3. Subitem 4
+
+## Tabs for something else
+
+{% tabs something-else %}
+
+{% tab something-else text %}
+
+Regular text
+
+{% endtab %}
+
+{% tab something-else quote %}
+
+> A quote
+
+{% endtab %}
+
+{% tab something-else list %}
+
+Hipster list
+
+- brunch
+- fixie
+- raybans
+- messenger bag
+
+{% endtab %}
+
+{% endtabs %}
+
+
+## TODO-Updates:
+- change the bullet point or number to theme colors **FINISHED**
+- tab indicator features change **FINISHED**
+- add dom transition like the blog
+- dynamic github repository cards
+- add interactive cursor
+- add extract block
+- Project page design
+
+## Later to do
+- archive page changes
+
+- edit distill page and add previous and next post nav
+- music
+- Bootstrap Tables edit make it more beautiful
+- Add adhd button for good reading. first word is capital.  
+
+
